--- a/docs/_data/config.yml
+++ b/docs/_data/config.yml
@@ -6,23 +6,13 @@ api:
   mapbox_desc: Dcycle Account Token, you should use your own here instead as this
     will change
 items:
-  - title: My Cool Website
+  - title: Dcycle
     lang: en
-    langs:
-      - lang: fr
-        path: /jekyll/fr/
-    home: /jekyll/jekyll.html
+    home: /
     menu:
-      - id: home
-        label: Home
-        href: /jekyll/jekyll.html
-  - title: Mon site web
-    home: /jekyll/fr/
-    lang: fr
-    langs:
-      - lang: en
-        path: /jekyll/jekyll.html
-    menu:
-      - id: home
-        label: Accueil
-        href: /jekyll/fr/
+      - id: blog
+        label: Blog
+        href: https://blog.dcycle.com/
+      - id: contact
+        label: Contact
+        href: https://blog.dcycle.com/contact/
